...
        [dispatch]
    );

    return (
        <SafeArea>
            <StatusBar barStyle={theme.colors.statusBar as StatusBarStyle} backgroundColor={theme.colors.background} />
            <CardsView testID='cardsView' zIndex={1} insets={insets}>
                {isLoading ? (
                    <CustomShimmerPlaceholder
                        style={{
                            borderRadius: 30,
                            width: '100%',
                            height: '100%',
...
