...
            <AuthInputContainer behavior={Platform.OS === 'ios' ? 'padding' : undefined}>
                <Header>
                    <HeaderText>{t('auth.username')}</HeaderText>
                </Header>
                <Colored>
                    <TextInput
                        testID='usernameInput'
                        value={username}
                        onChangeText={setUsername}
                        autoCompleteType={'email'}
                        textContentType={'emailAddress'}
                        keyboardType={'email-address'}
                        placeholder={t('common.placeholder')}
...
